Fixes some layout issues when viewing Resound from a narrower window.
* Changes background color on hover when mousing over a row

--- a/src/styles/_global.sass
+++ b/src/styles/_global.sass
@@ -48,16 +48,18 @@ h1
 
 .header__actions
   margin: 7px 0
+  text-align: right
 
 .header__button
   border: 1px solid $primary-color
   padding: 5px 12px
   text-transform: uppercase
+  white-space: nowrap
   color: $primary-color
   font-weight: 0.9em
 
 .body__container
-  margin: 0 20px
+  margin: 0
 
 // Pagination
 
