--- a/src/styles/components/_dropzone.sass
+++ b/src/styles/components/_dropzone.sass
@@ -73,7 +73,7 @@
 
   .queue__text
     color: $secondary-color
-    font-size: 1.5rem
+    font-size: 1rem
     font-weight: lighter
 
   .queued-item
