--- a/src/styles/components/_explorer.sass
+++ b/src/styles/components/_explorer.sass
@@ -9,8 +9,10 @@
   .explorer__table__audio-item
     transition-property: max-height, height
     overflow: hidden
-    border-bottom: 2px solid $table-border-color
     color: inherit
+
+  .explorer__table__audio-item:hover
+    background-color: $secondary-background-color
 
   .explorer__table__audio-item--blind-down
     animation: blind-in 1s forwards
@@ -24,10 +26,15 @@
     font-size: 0.9em
     padding: 1em 3em
     border-bottom: 2px solid $table-border-color
+    white-space: nowrap
 
   .explorer__loading
     font-size: 1.5rem
     text-align: center
+
+  .audio__link
+    text-decoration: none
+    color: inherit
 
 @keyframes blind-in
   0%
